plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.triton.msa'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// thymeleaf layout
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.4.0'

	// SSH 연결 - Apache MINA SSHD Core
	implementation 'org.apache.sshd:sshd-core:2.12.1'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Apache Tika - 텍스트 추출용
	implementation 'org.apache.tika:tika-core:3.2.1'
	implementation 'org.apache.tika:tika-parsers-standard-package:3.2.1'

	// 한글 파일명 압축 위함
	implementation 'org.apache.commons:commons-compress:1.26.0'

	// 응답 생성 렌더링을 위함
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
